--- a/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
+++ b/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApplication_BusTimeline.styles.css" asp-append-version="true" />
+   
 </head>
 <body>
     <header>
@@ -23,7 +24,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/map">Map</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Map">Map</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item">
+                            <a class="nav-link text-black"asp-page="/Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-black" asp-page="/Register">Register</a>
                         </li>
                     </ul>
                 </div>
