--- a/WebApplication-BusTimeline/Pages/Index.cshtml
+++ b/WebApplication-BusTimeline/Pages/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Dobrodošli </h1>
+    <h1 class="display-4">Dobrodošli @Model.username </h1> 
+    
     @*<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
 </div>
