--- a/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
+++ b/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
@@ -24,7 +24,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Map">Map</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Routes/Routes">Rute</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Stops/StopsView">Stanice</a>
                         </li>
                     </ul>
                 </div>
@@ -32,10 +35,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <ul class="navbar-nav ">
                         <li class="nav-item">
-                            <a class="nav-link text-black"asp-page="/Login">Login</a>
+                            <a class="nav-link text-black"asp-page="/Login/Login">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-black" asp-page="/Register">Register</a>
+                            <a class="nav-link text-black" asp-page="/Register/Register">Register</a>
                         </li>
                     </ul>
                 </div>
