RoutesView with map

--- a/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
+++ b/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Routes/Routes">Rute</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Routes/RoutesView">Rute</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Stops/StopsView">Stanice</a>
