--- a/WebApplication-BusTimeline/Pages/Routes/RoutesView.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RoutesView.cshtml
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
-<div class="form-group"> 
+<div class="mb-3" > 
 <form method="get" action="/Routes/RoutesView">   
     <label for="routeSelector">Prikaži liniju:</label>
     <select id="routeSelector" name="routeName" onchange="this.form.submit()">
@@ -34,10 +34,10 @@
            @*  var coordinates = Array.from(@Html.Raw(Json.Serialize(Model.LstStops.Select(l => new double[] { l.Lat, l.Lon })))); *@
              @foreach (var l in Model.LstStops)
             {
-            coordinates.Add(new (@l.Lat,@l.Lon));
+                coordinates.Add(new (@l.Lat,@l.Lon));
              } 
 
-                    var polygon = L.polygon(coordinates).addTo(map);
+            var polygon = L.polygon(coordinates).addTo(map);
             map.fitBounds(polygon.getBounds());
 
 
@@ -47,7 +47,16 @@
 
  
 }
+@if (Model.ErrorMessage != null)
+{
+    <div class="alert alert-danger" role="alert" style="margin-right: 800px;">
+        <h7>@Model.ErrorMessage</h7>
+    </div>
+
+}
 <div id="map" style="height: 600px;"></div>
+
+
 
 
 <script>
