--- a/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
+++ b/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow mb-3" style="background-color:#cfe2ff; border-bottom: 1px solid black;"  >
             <div class="container">
                 @*<a class="navbar-brand" asp-area="" asp-page="/Index">WebApplication_BusTimeline</a>*@
                @* <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
