--- a/WebApplication-BusTimeline/Pages/Login/Login.cshtml
+++ b/WebApplication-BusTimeline/Pages/Login/Login.cshtml
@@ -6,14 +6,14 @@
 
 <div class="mb-4">
     <h2>Login</h2>
-    <form method="post">
+    <form method="get">
         <div class="mb-2">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" asp-for="UserLoginDTO.Username" required>
+            <input type="text" id="username" name="username" asp-for="Username" required>
         </div>
         <div class="mb-2">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" asp-for="UserLoginDTO.Password" required>
+            <input type="password" id="password" name="password" asp-for="Password" required>
         </div>
         <div class="mb-4">
             <button type="submit">Login</button>
