Modified Route Views

--- a/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
+++ b/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Routes/RoutesView">Rute</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Routes/RoutesView2">Rute2</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Stops/StopsView">Stanice</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Stops/AddStops">Dodaj stanicu</a>
                         </li>
                     </ul>
                 </div>
