--- a/WebApplication-BusTimeline/Pages/Routes/RoutesView.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RoutesView.cshtml
@@ -3,82 +3,95 @@
 @{
 }
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin="" />
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+        crossorigin=""></script>
 
 <div class="mb-3" > 
 <form method="get" action="/Routes/RoutesView">   
     <label for="routeSelector">Prikaži liniju:</label>
     <select id="routeSelector" name="routeName" onchange="this.form.submit()">
         <option value="" disabled selected>Izaberite rutu</option>
-        <option value="kamenjar-crvena_cesma">Kamenjar-Crvena česma</option>
-        <option value="lacarak-kuper-mala_bosna">Laćarak-Kuper-Mala Bosna</option>
-        <option value="lacarak-industrijska_zona-groblje">Laćarak-Industrijska zona-Groblje</option>
+        <option value="Kamenjar-Crvena česma">Kamenjar-Crvena česma</option>
+        <option value="Laćarak-Kuper-Mala Bosna">Laćarak-Kuper-Mala Bosna</option>
+        <option value="Laćarak-Industrijska zona-Groblje">Laćarak-Industrijska zona-Groblje</option>
     </select>
     <br/>
 </form>
 </div>
 
-
-
-@if(Model.routeName != null)
-{
-    <div><h7> Trenutno prikazana ruta je: @Model.routeName </h7></div>
-
-    @if(Model.LstStops != null)
-    {       
-        List<(double Lat, double Lon)> coordinates = new List<(double Lat, double Lon)>();
-
-        <script>          
-
-             @foreach (var l in Model.LstStops)
-            {
-                coordinates.Add(new (@l.Lat,@l.Lon));
-             } 
-
-            var polygon = L.polygon(coordinates).addTo(map);
-            map.fitBounds(polygon.getBounds());
-
-
-        </script>
-        
-    }
-
- 
-}
 @if (Model.ErrorMessage != null)
 {
-    <div class="alert alert-danger" role="alert" style="margin-right: 800px;">
+    <div class="alert alert-danger" role="alert" style="margin-right: 625px;">
         <h7>@Model.ErrorMessage</h7>
     </div>
 
 }
-<div id="map" style="height: 600px;"></div>
+
+@if(Model.routeName != null && string.IsNullOrEmpty(Model.ErrorMessage))
+{
+    <div><h7> Trenutno prikazana ruta je: @Model.routeName </h7></div>
+}
+
+<div id="map" style="height: 600px;"></div> 
+
+@if(Model.routeName != null)
+{
+
+    @if (Model.RouteStops != null)
+    {       
+
+        List<(double Lat, double Lon)> coordinates = new List<(double Lat, double Lon)>(); 
+
+            @foreach (var r in Model.RouteStops.OrderBy(x => x.Rbr))
+            {
+                @foreach(var s in Model.Stops)
+                {                  
+                    @if(r.Stop.Id == s.Id)
+                    {
+                        coordinates.Add(new (r.Stop.Lat, r.Stop.Lon));
+                    }
+                }          
+            }
 
 
+        @if(coordinates.Count > 2)
+        {
+           <script>
+               
+            var polygon = L.polygon(coordinates, {
+                        color: 'red',
+                        weight: 10,
+            }).addTo(map)
 
+            map.fitBounds(polygon.getBounds());               
+
+            </script>
+        }
+        
+
+        
+        @foreach (var a in coordinates)
+        {
+            <h3>@a.Lat</h3>
+            <h3>@a.Lon</h3>
+        }
+       
+    }
+ 
+}
 
 <script>
     var map = L.map('map').setView([44.968190, 19.608141], 13);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 19,
     }).addTo(map);
+
 </script>
 
- 
 
-
-
-@* <script>
-    var map = L.map('map').setView([44.968190,19.608141], 13);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        maxZoom: 19,
-    }).addTo(map);
-
-    var polygon = L.polygon(coordinates).addTo(map);
-    map.fitBounds(polygon.getBounds());
-
-   
-</script> *@
 
 
