--- a/WebApplication-BusTimeline/Pages/Routes/RouteDetails.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RouteDetails.cshtml
@@ -4,58 +4,60 @@
 }
 
 <div class="row">
-	<div class="col-md-6">
+	<div class="col-md-7">
 		@if (Model.Route != null)
 		{
-			<div class="mb-2" style="width:400px">
+			<div class="mb-2" style="width:600px">
 				<div class="row">
-					<h4><span>Linija:</span> <span class="fw-bold">@Model.Route.Name</span></h4>
+					<h4><span>Dodajte novu stanicu na rutu: </span> <span class="fw-bold">@Model.Route.Name</span></h4>
 				</div>
 			</div >
 		}
 
+<div>
+	<form method="post" onsubmit="OnPostNewStanica()">
+			<div class="mb-1">
+			Stanica:
 
-	<div style="width:500px">
-		@if (Model.Stops?.Count > 0)
-		{
-			<div class="row">
-				<div class="col-9">
+					<select id="SelStanicaId" asp-for="SelStanicaId"  required asp-items="@Model.StanicaList" style="margin-left:100px;">
+				<option value="" disabled selected>Izaberite stanicu</option>
 
-					<table class="table" width="200px">
-						<thead class="table-primary">
-						
-							<th style="text-align:center">Id</th>
-							<th style="text-align:center">Naziv</th>
-							<th></th>
-						</thead>
+			</select>
+		</div>
 
-						@foreach (var s in Model.Stops)
-						{
-							<tr class="table-secondary">
+			<div class="mb-1">
+			Pozicija stanice:
 
-									<td style="text-align:center">@s.Id</td>
-									<td style="text-align:center">@s.Name</td>
-									<td style="text-align:center">
-										<a href=@($"https://localhost:7292/Routes/RouteDetails?routeId={Model.Route.Id}&stanicaId={s.Id}&lastRbr={Model.LastRBr}")>
-											<button class="btn btn-primary" style="background-color:white; width:40px; height:40px; display: flex; align-items: center; justify-content: center;">
-												@* <svg width="147px" height="147px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M12.2929 4.29289C12.6834 3.90237 13.3166 3.90237 13.7071 4.29289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L13.7071 19.7071C13.3166 20.0976 12.6834 20.0976 12.2929 19.7071C11.9024 19.3166 11.9024 18.6834 12.2929 18.2929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L12.2929 5.70711C11.9024 5.31658 11.9024 4.68342 12.2929 4.29289Z" fill="#000000"></path> </g></svg>
-			 *@								</button>
-										</a>
-									</td>
-							</tr>
-						}
-
-					</table>
-
-				</div>
-
+					<select id="SelPozicijaId" asp-for="SelPozicijaId" required style="margin-left:45px;">
+				<option value="1">Prva stanica</option>
+				<option value="2">Pre izabrane stanice</option>
+				<option value="3">Posle izabrane stanice</option>
+				<option value="4">Poslednja stanica</option>
+		</select  >
 			</div>
 
-		}
+			<div class="mb-1">
+					Minuta od prethodne: <input type="number" required min="0" asp-for="TimeInterval" />
 		</div>
-	</div>
+			<div class="mb-2">
+					Metara od prethodne: <input type="number" required min="0" asp-for="MetarDistance" />
+		</div>
 
-	<div class="col-md-4">
+				<div style="text-align: center;" class="col-md-7" >
+					<div class="mb-3">
+						<button type="submit" value="Dodaj" style="text-align:center; background-color:#cfe2ff ">Dodaj</button>
+					</div>
+				
+		</div>
+			
+
+		<input type="hidden" id="RouteId" asp-for="RouteId" value="@Model?.Route?.Id"/>
+
+	</form>
+
+</div>
+	
+	<div class="col-md-7">
 		<div class="mb-3">
 			<h4>Stanice na liniji:</h4>
 		</div>
@@ -68,6 +70,8 @@
 			<table class="table">
 				<thead class="table-primary">
 					<tr>
+						
+						<th></th>
 						<th></th>
 						<th style="text-align:center">Redni broj</th>
 						<th style="text-align:center">Stanica</th>
@@ -76,17 +80,27 @@
 				<tbody>
 					@foreach (var s in Model.RouteStops)
 					{
-						<tr class="table-secondary">
+										
+						<tr class="@(s.Rbr.ToString() == Model.SelectRbr ? "table-primary" : "table-secondary")">													
 							<td style="text-align:center">
+								<a href=@($"https://localhost:7292/Routes/RouteDetails?routeId={Model.Route.Id}&StanicaRbr={s.Rbr}")>
+									<button class="btn btn-primary" style="background-color:white; width:40px; height:40px; display: flex; align-items: center; justify-content: center;">
+										<svg fill="#000000" width="115px" height="115px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M20 2H8a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2zm-6.933 12.481-3.274-3.274 1.414-1.414 1.726 1.726 4.299-5.159 1.537 1.281-5.702 6.84z"></path><path d="M4 22h11v-2H4V8H2v12c0 1.103.897 2 2 2z"></path></g></svg>
+									</button>
+								</a>
+							</td>
+							<td>
 								<form method="post" asp-page-handler="DeleteRouteStop" asp-route-routeId="@Model?.Route?.Id" asp-route-stanicaId="@s?.Id" asp-route-Rbr="@s?.Rbr">
 									<button class="btn btn-primary" style="background-color:white; width:40px; height:40px; display: flex; align-items: center; justify-content: center;">
-										@* <svg width="40px" height="40px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M11.7071 4.29289C12.0976 4.68342 12.0976 5.31658 11.7071 5.70711L6.41421 11H20C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13H6.41421L11.7071 18.2929C12.0976 18.6834 12.0976 19.3166 11.7071 19.7071C11.3166 20.0976 10.6834 20.0976 10.2929 19.7071L3.29289 12.7071C3.10536 12.5196 3 12.2652 3 12C3 11.7348 3.10536 11.4804 3.29289 11.2929L10.2929 4.29289C10.6834 3.90237 11.3166 3.90237 11.7071 4.29289Z" fill="#000000"></path> </g></svg>
-			 *@						</button>
+										<svg width="40px" height="40px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="#000000" d="M352 192V95.936a32 32 0 0 1 32-32h256a32 32 0 0 1 32 32V192h256a32 32 0 1 1 0 64H96a32 32 0 0 1 0-64h256zm64 0h192v-64H416v64zM192 960a32 32 0 0 1-32-32V256h704v672a32 32 0 0 1-32 32H192zm224-192a32 32 0 0 0 32-32V416a32 32 0 0 0-64 0v320a32 32 0 0 0 32 32zm192 0a32 32 0 0 0 32-32V416a32 32 0 0 0-64 0v320a32 32 0 0 0 32 32z"></path></g></svg>
+									</button>
 								</form>
 							</td>
 							<td style="text-align:center">@s.Rbr</td>
 							<td style="text-align:center">@s.Stop.Name</td>
+															
 						</tr>
+										
 					}
 				</tbody>
 
@@ -96,6 +110,4 @@
 			</div>
 		</div>
 
-
-
-
+		</div>
