Modified Login and Register View

--- a/WebApplication-BusTimeline/Pages/Login/Login.cshtml
+++ b/WebApplication-BusTimeline/Pages/Login/Login.cshtml
@@ -6,7 +6,7 @@
 
 <div class="mb-4">
     <h2>Login</h2>
-    <form method="get">
+    <form method="post">
         <div class="mb-2">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" asp-for="Username" required>
@@ -27,4 +27,4 @@
     </form>
 </div>
 
-<a href="../Register/Register">New to our app, Register!</a>
+<a href="../Register/Register">Novi u našoj aplikaciji, registrujte se!</a>
