--- a/WebApplication-BusTimeline/Pages/Register/Register.cshtml
+++ b/WebApplication-BusTimeline/Pages/Register/Register.cshtml
@@ -8,31 +8,31 @@
     <form method="post">
         <div class="mb-2">
             <label for="name">Name:</label>
-            <input type="text" id="name" name="name" asp-for="UserRegisterDTO.Name" required>
+            <input type="text" id="name" name="name" asp-for="userRegisterDTO.Name" required>
         </div>
         <div class="mb-2">
             <label for="lastname">Lastname:</label>
-            <input type="text" id="lastname" name="lastname" asp-for="UserRegisterDTO.Lastname" required>
+            <input type="text" id="lastname" name="lastname" asp-for="userRegisterDTO.Lastname" required>
         </div>
         <div class="mb-2">
             <label for="address">Address:</label>
-            <input type="text" id="address" name="address" asp-for="UserRegisterDTO.Address">
+            <input type="text" id="address" name="address" asp-for="userRegisterDTO.Address">
         </div>
         <div class="mb-2">
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" asp-for="UserRegisterDTO.Email" required>
+            <input type="email" id="email" name="email" asp-for="userRegisterDTO.Email" required>
         </div>
         <div class="mb-2">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" asp-for="UserRegisterDTO.Username" required>
+            <input type="text" id="username" name="username" asp-for="userRegisterDTO.Username" required>
         </div>
         <div class="mb-2">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" asp-for="UserRegisterDTO.Password" required>
+            <input type="password" id="password" name="password" asp-for="userRegisterDTO.Password" required>
         </div>
         <div class="mb-2">
             <label for="confirmpassword">Confirm Password:</label>
-            <input type="password" id="confirmpassword" name="confirmpassword" asp-for="UserRegisterDTO.ConfirmPassword" required>
+            <input type="password" id="confirmpassword" name="confirmpassword" asp-for="userRegisterDTO.ConfirmPassword" required>
         </div>
         <div class="mb-4">
             <button type="submit">Register</button>
@@ -47,4 +47,4 @@
     </form>
 </div>
 
-<a href="../Login/Login">Already our user, Login !</a>
+<a href="../Login/Login">Već ste naš korisnik, prijavite se!</a>
