--- a/WebApplication-BusTimeline/Pages/Routes/RoutesView2.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RoutesView2.cshtml
@@ -11,20 +11,29 @@
         <th>Id</th>
         <th>Naziv</th>
         <th></th>
+        <th></th>
         </thead>
         <tbody>
             @foreach (var r in Model.Routes)
             {
                 <tr class="table-secondary">
-                    <td style="width:50px">@r.Id</td>
-                    <td style="width:250px">@r.Name</td>
-                    <td style="width:100px">
+                    <td style="width:20px" >@r.Id</td>
+                    <td style="width:100px">@r.Name</td>
+                    <td style="width:20px">
 
                         <a href=@($"/Routes/RouteDetails?routeId={r.Id}")>
                             <button >
                                 <img height="30px" width="30px" src="https://shorturl.at/mwEU8" alt="Info">
                             </button>
                         </a>
+
+                    <td style="width:20px">
+                        <form method="post" asp-page-handler="DeleteRoute" asp-route-routeId="@r.Id" >
+                            <button class="btn btn-primary" style="background-color:white; width:40px; height:40px; display: flex; align-items: center; justify-content: center;">
+                                <svg width="40px" height="40px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="#000000" d="M352 192V95.936a32 32 0 0 1 32-32h256a32 32 0 0 1 32 32V192h256a32 32 0 1 1 0 64H96a32 32 0 0 1 0-64h256zm64 0h192v-64H416v64zM192 960a32 32 0 0 1-32-32V256h704v672a32 32 0 0 1-32 32H192zm224-192a32 32 0 0 0 32-32V416a32 32 0 0 0-64 0v320a32 32 0 0 0 32 32zm192 0a32 32 0 0 0 32-32V416a32 32 0 0 0-64 0v320a32 32 0 0 0 32 32z"></path></g></svg>
+                            </button>
+                        </form>
+                    </td>
 
 
 
