--- a/WebApplication-BusTimeline/Pages/Stops/AddStops.cshtml
+++ b/WebApplication-BusTimeline/Pages/Stops/AddStops.cshtml
@@ -7,10 +7,6 @@
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
 
-
-
-
-
 <form method="post" onsubmit="OnPostNewStop()">
 <div style="float: right; width: 80%">
 		<div id="map" style="height: 600px;"></div>
@@ -37,7 +33,11 @@
 
 		}
 		
-	</div>
+		<div style="position:absolute; bottom : 0; left:0;">
+			<a href="../Index">Home</a>
+		</div>
+</div>
+		
 	
 
 	<script>
