--- a/WebApplication-BusTimeline/Pages/Routes/RouteDetails.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RouteDetails.cshtml
@@ -11,11 +11,11 @@
 <div style="float: left; width: 40%">
 <div class="row">
 	
-		@if (Model.Route != null)
+		@if (Model.RouteWithStops != null)
 		{
 			<div class="mb-2" style="width:375px">
 				<div class="row">
-					<h4><span>Dodajte novu stanicu na rutu: </span> <span class="fw-bold">@Model.Route.Name</span></h4>
+					<h4><span>Dodajte novu stanicu na rutu: </span> <span class="fw-bold">@Model.RouteWithStops.Name</span></h4>
 				</div>
 			</div >
 		}
@@ -25,7 +25,7 @@
 			<div class="mb-1">
 			Stanica:
 
-					<select id="SelStanicaId" asp-for="SelStanicaId"  required asp-items="@Model.StanicaList" style="margin-left:100px;">
+					<select id="SelStanicaId" asp-for="SelStanicaId" required asp-items="@Model.StanicaList" style="margin-left:100px;">
 					<option value="" disabled selected>Izaberite stanicu</option>
 
 					</select>
@@ -56,7 +56,7 @@
 				</div>
 			
 
-		<input type="hidden" id="RouteId" asp-for="RouteId" value="@Model?.Route?.Id"/>
+		<input type="hidden" id="RouteId" asp-for="RouteId" value="@Model?.RouteWithStops?.Id"/>
 		<input type="hidden" id="SelectRbr" asp-for="SelectRbr" value="@Model?.SelectRbr"/>
 
 	</form>
@@ -85,19 +85,19 @@
 				<tbody>
 					
 
-					@foreach (var s in Model.RouteStops)
+					@foreach (var s in Model.RouteWithStops.Stops)
 					{
 										
 						<tr class="@(s.Rbr.ToString() == Model.SelectRbr ? "table-primary" : "table-secondary")">													
 							<td style="text-align:center">
-								<a href=@($"https://localhost:7292/Routes/RouteDetails?routeId={Model.Route.Id}&StanicaRbr={s.Rbr}")>
+								<a href=@($"https://localhost:7292/Routes/RouteDetails?routeId={Model.RouteWithStops.Id}&StanicaRbr={s.Rbr}")>
 									<button class="btn btn-primary" style="background-color:white; width:40px; height:40px; display: flex; align-items: center; justify-content: center;">
 													<svg width="104px" height="104px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="Warning / Info"> <path id="Vector" d="M12 11V16M12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21ZM12.0498 8V8.1L11.9502 8.1002V8H12.0498Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g> </g></svg>
 												</button>
 								</a>
 							</td>
 							<td>
-								<form method="post" asp-page-handler="DeleteRouteStop" asp-route-routeId="@Model?.Route?.Id" asp-route-stanicaId="@s?.Id" asp-route-Rbr="@s?.Rbr">
+											<form method="post" asp-page-handler="DeleteRouteStop" asp-route-routeId="@Model?.RouteWithStops?.Id" asp-route-stanicaId="@s?.Id" asp-route-Rbr="@s?.Rbr">
 									<button class="btn btn-primary" style="background-color:white; width:40px; height:40px; display: flex; align-items: center; justify-content: center;">
 										<svg width="40px" height="40px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="#000000" d="M352 192V95.936a32 32 0 0 1 32-32h256a32 32 0 0 1 32 32V192h256a32 32 0 1 1 0 64H96a32 32 0 0 1 0-64h256zm64 0h192v-64H416v64zM192 960a32 32 0 0 1-32-32V256h704v672a32 32 0 0 1-32 32H192zm224-192a32 32 0 0 0 32-32V416a32 32 0 0 0-64 0v320a32 32 0 0 0 32 32zm192 0a32 32 0 0 0 32-32V416a32 32 0 0 0-64 0v320a32 32 0 0 0 32 32z"></path></g></svg>
 									</button>
@@ -142,7 +142,7 @@
 
 		var coordinates = [];
 
-			@foreach (var r in Model?.RouteStops?.OrderBy(x => x.Rbr))
+			@foreach (var r in Model?.RouteWithStops.Stops?.OrderBy(x => x.Rbr))
 			{
 			@:coordinates.push({ lat: "@r.Stop.Lat.ToString().Replace(',','.')", lon: "@r.Stop.Lon.ToString().Replace(',','.')" });
 			}
@@ -150,9 +150,9 @@
 		const polyline = new L.polyline(
 			[coordinates],
 			{
-				color: '#22e631',
-				weight: 3,
-				opacity: 0.5,
+				color: "@Model.RouteWithStops.Color",
+				weight: 4,
+				opacity: 0.8,
 				smoothFactor: 1,
 			}).addTo(map);
 
@@ -162,5 +162,4 @@
 	</div>
 
 </div>
-			@* //color='@Model.Route.Color', *@
 
