--- a/WebApplication-BusTimeline/Pages/Routes/RoutesView.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RoutesView.cshtml
@@ -13,12 +13,12 @@
 <div class="mb-3" >
 	<form method="get" action="/Routes/RoutesView">
 		<label for="routeSelector">Prikaži liniju:</label>
-		<select id="routeSelector" name="routeName" onchange="this.form.submit()">
+		<select id="routeSelector" name="routeId" onchange="this.form.submit()">
 			<option value="" disabled selected>Izaberite rutu</option>
 			if(Model.Routes? != null){
 					@foreach (var s in Model?.Routes)
 					{
-						<option value="@s.Name"> @s.Name</option>
+						<option value="@s.Id"> @s.Name</option>
 					}
 				}
 		</select>
@@ -34,40 +34,48 @@
 
 }
 
-@if (Model.routeName != null && string.IsNullOrEmpty(Model.ErrorMessage))
+@if (Model.RouteId != null && string.IsNullOrEmpty(Model.ErrorMessage))
 {
-	<div><h7> Trenutno prikazana ruta je: @Model.routeName </h7></div>
+	<div><h7> Trenutno prikazana ruta je: @Model.RouteWithStop.Name </h7></div>
 }
 
 <div id="map" style="height: 600px;"></div>
 
 
 <script>
-	var map = L.map('map').setView([44.968190, 19.608141], 13);
+	var map = L.map('map').setView([44.968190, 19.608141], 12);
 	L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		maxZoom: 19,
 	}).addTo(map);
 
 	var coordinates = [];
 
-</script>
-@*
-	if (Model) {
-
-
-	@foreach (var r in Model?.RouteStops.OrderBy(x => x.Rbr))
+	@if(Model.RouteWithStop != null)
 	{
-		@:coordinates.push({ lat: "@r.Stop.Lat.ToString().Replace(',','.')", lon: "@r.Stop.Lon.ToString().Replace(',','.')" });
+		@for(int i=0; i<Model.RouteWithStop?.Stops.Count(); i++)
+		{
+			@:coordinates.push({ lat: "@Model.RouteWithStop.Stops[i].Stop.Lat.ToString().Replace(',','.')", lon: "@Model.RouteWithStop.Stops[i].Stop.Lon.ToString().Replace(',','.')" });
+		}
 	}
 
-			const polyline = new L.polyline(
+	i=0; 
+	while (i < coordinates.length) {
+		console.log(coordinates[i]);
+		i++;
+	}
+
+	DrawPolyline = [];
+
+	L.polyline(
 		[coordinates],
 		{
-			color: '#22e631',
+			color: 'red',
 			weight: 3,
 			opacity: 0.5,
 			smoothFactor: 1,
 		}).addTo(map);
-	}
- *@
+
+
+</script>
+
 <a href="../Index">Home</a>
