--- a/WebApplication-BusTimeline/Pages/Routes/RouteDetails.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RouteDetails.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
+@using Microsoft.AspNetCore.Authorization;
 @model WebApplication_BusTimeline.Pages.Routes.RouteDetailsModel
+@attribute [Authorize(Roles = "Admin")]
+
 @{
 }
 <head>
@@ -85,7 +88,7 @@
 				<tbody>
 					
 
-					@foreach (var s in Model.RouteWithStops.Stops)
+					@foreach (var s in Model.RouteWithStops.Stops.OrderBy(x => x.Rbr))
 					{
 										
 						<tr class="@(s.Rbr.ToString() == Model.SelectRbr ? "table-primary" : "table-secondary")">													
