--- a/WebApplication-BusTimeline/Pages/Routes/RoutesView2.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RoutesView2.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
+@using Microsoft.AspNetCore.Authorization;
 @model WebApplication_BusTimeline.Pages.Routes.RoutesView2Model
+@attribute [Authorize(Roles = "Admin")]
 @{
 }
 
