--- a/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
+++ b/WebApplication-BusTimeline/Pages/Shared/_Layout.cshtml
@@ -26,23 +26,29 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Routes/RoutesView">Rute</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Routes/RoutesView2">Rute Admin</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Routes/AddRoute">Dodaj Rutu Admin</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Routes/RoutesView2">Rute Admin</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Routes/AddRoute">Dodaj Rutu Admin</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Stops/AddStops">Dodaj stanicu Admin</a>
+                            </li>
+                        }
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Stops/StopsView">Stanice</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Stops/AddStops">Dodaj stanicu Admin</a>
-                        </li>
+                       
                     </ul>
                 </div>
 
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <ul class="navbar-nav ">
+
                         <li class="nav-item">
                             <a class="nav-link text-black"asp-page="/Login/Login">Login</a>
                         </li>
